--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             line-height: 1.4;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar for perfect one-page fit */
+            overflow: hidden; /* Disables scroll bar for perfect fit */
         }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
-            /* Tightened top padding to pull everything up from the bottom */
+            /* Top padding to ensure name and hair are fully visible */
             padding: 40px 20px 10px 20px; 
             height: 100vh;
             box-sizing: border-box;
@@ -48,7 +48,7 @@
         .bio-text h1 {
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
             color: #000;
         }
 
@@ -61,7 +61,7 @@
             line-height: 1.45;
         }
 
-        /* Hyperlinks: orange on hover, no underline */
+        /* Hyperlink Styles: turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -78,13 +78,13 @@
             text-align: center;
         }
 
-        /* Profile Picture: 195px, object-position adjusted for hair */
+        /* Profile Picture: 195px, prioritized hair visibility */
         .profile-img {
             width: 195px; 
             height: 195px;
             border-radius: 50%;
             object-fit: cover;
-            object-position: 50% 15%; /* Ensures hair isn't cut off */
+            object-position: 50% 15%; 
             display: block;
             border: 1px solid #f0f0f0;
             flex-shrink: 0;
@@ -96,7 +96,7 @@
             margin-top: 5px; 
             margin-bottom: 10px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
+            padding-bottom: 4px;
             font-weight: 400;
             color: #000;
             text-align: left;
@@ -106,25 +106,25 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* Spaces projects to fill the screen */
+            justify-content: space-between; 
             padding-bottom: 25px;
         }
 
         .project-entry {
             display: flex;
             align-items: flex-start;
-            margin-bottom: 8px; /* Small space between entries */
+            margin-bottom: 10px; 
         }
 
         .project-entry:last-child {
             margin-bottom: 0;
         }
 
-        /* Thumbnails: Height set to 160px to ensure the last image isn't cut off */
+        /* Project Thumbnails: Contain + Black Background */
         .project-img, .placeholder-box {
-            width: 290px; 
-            height: 160px; 
-            margin-right: 35px;
+            width: 280px; 
+            height: 150px; 
+            margin-right: 30px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: contain; 
@@ -143,7 +143,7 @@
 
         .project-info h3 {
             margin: 0;
-            font-size: 1.15em;
+            font-size: 1.1em;
             font-weight: 700;
             color: #000; 
             cursor: default;
@@ -153,32 +153,33 @@
             margin: 1px 0;
         }
 
-        /* Category Label: 10.5pt, bold/italic */
+        /* Category Label: 10.5pt */
         .project-category {
             font-style: italic;
             font-weight: 700;
             font-size: 10.5pt;
         }
 
+        /* Project Links (project page / code): Set to 10.5pt */
         .project-links {
-            font-size: 0.95em;
-            margin: 4px 0 !important;
+            font-size: 10.5pt;
+            margin: 3px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 5px !important;
+            margin-top: 4px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 480px; 
+            max-width: 500px; 
             line-height: 1.4;
         }
 
         @media (max-width: 750px) {
             body { overflow: auto; }
-            .container { height: auto; padding-top: 30px; }
+            .container { height: auto; padding-top: 20px; }
             header, .project-entry { flex-direction: column; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
             .bio-text { padding-right: 0; }
@@ -201,7 +202,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Large Profile Picture with Adjusted Hair Visibility -->
+            <!-- Large Profile Picture with prioritized Hair visibility -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
