--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor/blob/main/sentinel_final.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
+                        A real-time dashboard for monitoring global conflict signals. Utilizes a rule-based NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
