--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                 </div>
             </div>
 
-            <!-- Project 2 -->
+            <!-- Project 2 (UPDATED WITH IMAGE) -->
             <div class="project-entry">
-                <div class="placeholder-box"> [Aegis Distribution Plot] </div>
+                <img src="aegis_graph.png" alt="Aegis Forensic Analysis" class="project-img">
                 <div class="project-info">
                     <h3>Aegis: Public Expenditure Anomaly Detector</h3>
                     <p>Kenneth Thakur</p>
