--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
 
-            <!-- Project 2 (UPDATED WITH IMAGE) -->
+            <!-- Project 2 -->
             <div class="project-entry">
                 <img src="aegis_graph.png" alt="Aegis Forensic Analysis" class="project-img">
                 <div class="project-info">
@@ -237,7 +237,8 @@
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #c09000;">Forensic Data Science · 2026</p>
                     <div class="project-links">
-                        <a href="#">project page</a> / <a href="#">code</a>
+                        <a href="https://github.com/Kenneth-Thakur/Aegis-Detector" target="_blank">project page</a> / 
+                        <a href="https://github.com/Kenneth-Thakur/Aegis-Detector/blob/main/aegis_final.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
                         An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection.
