--- a/index.html
+++ b/index.html
@@ -244,13 +244,14 @@
 
             <!-- Project 3 -->
             <div class="project-entry">
-                <div class="placeholder-box"> [Citadel Network Graph] </div>
+                <img src="citadel_map.png" alt="Citadel Network Graph" class="project-img">
                 <div class="project-info">
                     <h3>Citadel: Critical Infrastructure Vulnerability Scanner</h3>
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #28a745;">Cybersecurity & Digital Defense · 2026</p>
                     <div class="project-links">
-                        <a href="#">project page</a> / <a href="#">code</a>
+                        <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner" target="_blank">project page</a> / 
+                        <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner/blob/main/citadel_final.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
                         An automated vulnerability assessment engine for industrial networks. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation.
