--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #c09000;">Forensic Data Science · 2026</p>
                     <div class="project-links">
-                        <a href="https://github.com/Kenneth-Thakur/Aegis-Detector" target="_blank">project page</a> / 
+                        <a href="https://github.com/Kenneth-Thakur/Aegis-Detector#readme" target="_blank">project page</a> / 
                         <a href="https://github.com/Kenneth-Thakur/Aegis-Detector/blob/main/aegis_final.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
@@ -250,7 +250,7 @@
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #28a745;">Cybersecurity & Digital Defense · 2026</p>
                     <div class="project-links">
-                        <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner" target="_blank">project page</a> / 
+                        <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner#readme" target="_blank">project page</a> / 
                         <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner/blob/main/citadel_final.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
