--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
 
             <!-- Project 1 -->
             <div class="project-entry">
-                <img src="sentinel_ds_hero.png" alt="Sentinel Monitor" class="project-img">
+                <img src="sentinel_grid.png" alt="Sentinel Monitor" class="project-img">
                 <div class="project-info">
                     <h3>Sentinel: Geopolitical Conflict Monitor</h3>
                     <p>Kenneth Thakur</p>
                     <p class="project-category" style="color: #d93025;">Open Source Intelligence (OSINT) · 2026</p>
                     <div class="project-links">
                         <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor#readme" target="_blank">project page</a> / 
-                        <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor/blob/main/sentinel_final.py" target="_blank">code</a>
+                        <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor/blob/main/sentinel.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
                         A real-time dashboard for monitoring global conflict signals. Utilizes a rule-based NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
