--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <a href="https://github.com/Kenneth-Thakur/Sentinel-Monitor/blob/main/sentinel.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a resilient RSS aggregation pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
+                        A real-time dashboard monitoring global conflict signals. Utilizes a resilient RSS aggregation pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
