--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <a href="https://github.com/Kenneth-Thakur/Citadel-Scanner/blob/main/citadel.py" target="_blank">code</a>
                     </div>
                     <p class="project-description">
-                        An automated vulnerability assessment engine for industrial networks. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation.
+                        An automated vulnerability assessment engine for industrial networks. Utilizes simulated Shodan and NIST NVD threat data to prioritize risk remediation.
                     </p>
                 </div>
             </div>
